--- a/chocolate.html
+++ b/chocolate.html
@@ -22,25 +22,25 @@
                 <span><h1>Ethan's Bakery</h1></span>
                 <div>
                     <span><h1>Меню</h1></span>
-                    <span><h2 class="h2">Торти</h2></span>
+                    <span><h2 class="h2">Шоколад</h2></span>
                     <div class="card">
-                        <img src="Image/upload.version_1.0.d2906eaf2e70bfacb9d267858d1f0c33.350x350.jpeg" alt="Avatar">
+                        <img src="Image/iz-chego-delayut-belyy-shokolad-2.jpg" alt="Avatar">
                         <div class="container">
-                            <h2><b>Тірамісу</b></h2>
+                            <h2><b>Білий шоколад</b></h2>
                             <p><a href="#">Купити</a></p>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="Image/tort-pyanaya-vishnya-0.jpg" alt="Avatar">
+                        <img src="Image/11180015_darkchocolate_large.jpg" alt="Avatar">
                         <div class="container">
-                            <h2><b>Торт "Пьяна вишня"</b></h2>
+                            <h2><b>Чорний шоколад</b></h2>
                             <p><a href="#">Купити</a></p>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="Image/4082f8655bc49e1f13083ca911d615c3.jpg" alt="Avatar">
+                        <img src="Image/ingredient65_2b.jpg" alt="Avatar">
                         <div class="container">
-                            <h2><b>Торт "Снікерс"</b></h2>
+                            <h2><b>Молочний шоколад</b></h2>
                             <p><a href="#">Купити</a></p>
                         </div>
                     </div>
