--- a/menu.html
+++ b/menu.html
@@ -49,7 +49,7 @@
                         <img src="Image/chocolate-substitution-300x300.jpg" alt="Avatar">
                         <div class="container">
                             <h2><b>Шоколад</b></h2>
-                            <p><a href="#">Переглянути</a></p>
+                            <p><a href="chocolate.html">Переглянути</a></p>
                         </div>
                     </div>
                     <div class="card">
@@ -63,7 +63,7 @@
                         <img src="Image/candy-canes-square.jpg" alt="Avatar">
                         <div class="container">
                             <h2><b>Цукерки</b></h2>
-                            <p><a href="#">Переглянути</a></p>
+                            <p><a href="candy.html">Переглянути</a></p>
                         </div>
                     </div>
                 </div>
