--- a/candy.html
+++ b/candy.html
@@ -22,25 +22,25 @@
                 <span><h1>Ethan's Bakery</h1></span>
                 <div>
                     <span><h1>Меню</h1></span>
-                    <span><h2 class="h2">Торти</h2></span>
+                    <span><h2 class="h2">Цукерки</h2></span>
                     <div class="card">
-                        <img src="Image/upload.version_1.0.d2906eaf2e70bfacb9d267858d1f0c33.350x350.jpeg" alt="Avatar">
+                        <img src="Image/%D0%B7%D0%B0%D0%B2%D0%B0%D0%BD%D1%82%D0%B0%D0%B6%D0%B5%D0%BD%D0%BD%D1%8F%20(1).jpg" alt="Avatar">
                         <div class="container">
-                            <h2><b>Тірамісу</b></h2>
+                            <h2><b>Іриски</b></h2>
                             <p><a href="#">Купити</a></p>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="Image/tort-pyanaya-vishnya-0.jpg" alt="Avatar">
+                        <img src="Image/09b_depositphotos_37998535_m_2015.jpg" alt="Avatar">
                         <div class="container">
-                            <h2><b>Торт "Пьяна вишня"</b></h2>
+                            <h2><b>Цукерки карамельні</b></h2>
                             <p><a href="#">Купити</a></p>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="Image/4082f8655bc49e1f13083ca911d615c3.jpg" alt="Avatar">
+                        <img src="Image/cf6_depositphotos_39968319_s_2019.jpg" alt="Avatar">
                         <div class="container">
-                            <h2><b>Торт "Снікерс"</b></h2>
+                            <h2><b>Цукерки кокосові</b></h2>
                             <p><a href="#">Купити</a></p>
                         </div>
                     </div>
